# ai2print

./: .gitignore  .pylintrc  Cargo.toml  LICENSE  README.md  README_PT.md  clified_install.py  install.ps1  install.sh  pyproject.toml  pyrightconfig.json  run.sh  setup.sh  tools.yaml.example
.github/workflows/: ci.yml
installer/: installer.py
python/: blender_repair.py  glb_to_stl.py  glb_to_stl_wrapper.py  repair_bpy.py  repair_mesh.py  requirements.txt
scripts/: install-bootstrap.sh
src/: main.rs
